# gitlab-issue-mcp

./: .gitignore  README.md  config.example.yaml  pyproject.toml
src/gitlab_issue_mcp/: __init__.py  __main__.py  agent.py  cli.py  config.py  gitlab_client.py  server.py
tests/: test_agent.py  test_cli.py  test_config.py  test_gitlab_client.py  test_server.py
