[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitlab-issue-mcp"
version = "0.1.0"
description = "MCP server for GitLab issues with AI-powered question answering via Microsoft AutoGen"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["mcp", "gitlab", "autogen", "llm", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "python-gitlab>=4.0.0",
    "pyautogen>=0.2.0,<0.4.0",
    "pyyaml>=6.0",
    "openai>=1.0.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
gitlab-issue-mcp = "gitlab_issue_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gitlab_issue_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
